--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@ section:target h1 {
 <body>
 
  <nav>
-   <a href="#first"><i class="far fa-user"></i></a>
-   <a href="#second"><i class="fas fa-briefcase"></i></a>
-   <a href="#third"><i class="far fa-file"></i></a>
-   <a href="#fourth"><i class="far fa-address-card"></i></a>
+   <a href="#first"><i class="fa fa-user"></i></a>
+   <a href="#second"><i class="fa fa-briefcase"></i></a>
+   <a href="#third"><i class="fa fa-file"></i></a>
+   <a href="#fourth"><i class="fa fa-address-card"></i></a>
  </nav>
   
 <div class= 'container'> 
