--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/v4-shims.css">
  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-<script>
+<script type="text/babel">
   /*
   Johan Karlsson, 2020
   https://twitter.com/DonKarlssonSan
