--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/v4-shims.css">
  <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+ <script src="https://github.com/jwagner/simplex-noise.js"></script>
 <script type="text/babel">
   /*
   Johan Karlsson, 2020
