--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@ section:target h1 {
 }
 
 #first {
-  background:var(--primary-color);
+  /* background:var(--primary-color); */
 }
 #second {
     /* background: var(--complimentary-color); */
