--- a/index.html
+++ b/index.html
@@ -57,8 +57,11 @@
   </section>
 
  <section id= 'third'>
-   <h1>Third</h1>
-  </section>
+  <div class="glitch" data-text="CYBERCOUNTESS">CYBERCOUNTESS</div>
+  <div class="glow">CYBERCOUNTESS</div>
+  <p class="subtitle">Engineer﹒Gamer﹒Shenaniganizer</p>
+  <div class="scanlines"></div>
+ </section>
 
  <section id= 'fourth'>
    <h1>Fourth</h1>
