--- a/index.html
+++ b/index.html
@@ -53,13 +53,12 @@
   </section>
 
   <section id= 'second'>
-    <canvas id="canvas" title="Click to generate a new pattern!"></canvas>
+    <canvas id="canvas" title=""></canvas>
   </section>
 
  <section id= 'third'>
-  <div class="glitch" data-text="CYBERCOUNTESS">CYBERCOUNTESS</div>
-  <div class="glow">CYBERCOUNTESS</div>
-  <p class="subtitle">Engineer﹒Gamer﹒Shenaniganizer</p>
+  <div class="glitch" data-text="MR.ROBOTANIST">MR.ROBOTANIST</div>
+  <div class="glow">MR.ROBOTANIST</div>
   <div class="scanlines"></div>
  </section>
 
