--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  <link href="https://fonts.googleapis.com/css?family=Caveat:400,700&display=swap" rel="stylesheet">
  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/v4-shims.css">
- <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+ <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
  <script src="johan.js"></script>
  <link rel="stylesheet" type="text/css" href="main.css">
 
