--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
  <link href="https://fonts.googleapis.com/css?family=Caveat:400,700&display=swap" rel="stylesheet">
  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/all.css">
  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.0/css/v4-shims.css">
- <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
  <link rel="stylesheet" type="text/css" href="main.css">
- <script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/6.1.19/browser.min.js"></script>
+
+ <script text="text/babel">
 	// https://github.com/jwagner/simplex-noise.js
 
 	/*
