--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
 <div class= 'container'>
   <section id= 'first'>
+    <div class="boxContainer">
     	<div class="anxiety-box">
 		    <p>Getting anxious?<br>Follow the dot</p>
 
@@ -48,6 +49,7 @@
 			    <p>Chest breathing causes an upset in the oxygen and carbon dioxide levels in the body resulting in increased heart rate, dizziness, muscle tension, and other physical sensations. Whereas during abdominal or diaphragmatic breathing, you take even, deep breaths.</p>
 			    <p>This is actually the way newborn babies naturally breathe and you're also probably using this kind of breathing when you're in deep sleep.</p>
 	  	</div>
+	</div>
   </section>
 
   <section id= 'second'>
