--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
  </nav>
 
 <div class= 'container'>
+	<section>
+		  <div class="glitch" data-text="MR.ROBOTANIST">MR.ROBOTANIST</div>
+		  <div class="glow">MR.ROBOTANIST</div>
+		  <div class="scanlines"></div>
+	</section>
   <section id= 'first'>
     <div class="boxContainer">
     	<div class="anxiety-box">
