--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
  <script type="text/babel" src="johan.js"></script>
 
+ <title>MR ROBOTANIST</title>
+ <meta name="description" content="The blur between technology and nature is explored.">
 </head>
 <body>
 
