--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
   </section>
 
  <section id= 'third'>
+ 	<div class="container2">
+		<div class=".wave#wave1"></div>
+		<div class=".wave#wave2"></div>
+	</div>
  </section>
 
  <section id= 'fourth'>
