--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
   </section>
 
  <section id= 'third'>
- 	<div class="container2">
-		<div class=".wave#wave1"></div>
-		<div class=".wave#wave2"></div>
+ 	<div id="container2">
+		<div id=".wave#wave1"></div>
+		<div id=".wave#wave2"></div>
 	</div>
  </section>
 
