--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+      <div class="glitch" data-text="CYBERCOUNTESS">CYBERCOUNTESS</div>
+      <div class="glow">CYBERCOUNTESS</div>
+      <p class="subtitle">Engineer﹒Gamer﹒Shenaniganizer</p>
+      <div class="scanlines"></div>
       <button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
